<resources>
    <string name="app_name">AEV Demo</string>
    <string name="run_btn_text">Run</string>
    <string name="btn_verify_text">VERIFY</string>
    <string name="endpointUrlKey">endpointUrl</string>
    <string name="agreementToTheTermsKey">agreementToTheTerms</string>
    <string name="defaultEndpointUrl">https://aev.fpapi.io</string>
    <string name="apiTokenKey">apiKey</string>
    <string name="privateApiTokenKey">privateApiKey</string>
    <string name="defaultPublicApiToken">21aduUzR3mKWLbsm28T6WdOJOUT</string>
    <string name="defaultPrivateApiToken">21aduXlR4PG8XpROG5gpWXJEdNo</string>
    <string name="demo_description">The demo app shows capabilities of the AEV library for verification security of environment. The library sends a set of signals to the server. The server verifies safety of the application environment.</string>
    <string name="get_started_btn_text">Verify environment</string>
    <string name="agreement">by clicking this button I agree to the terms.</string>
    <string name="fingerprintjs">FingerprintJS</string>
    <string name="request_id_text">Request ID</string>
    <string name="logs_btn_text">Logs</string>
    <string name="get_results_by_request_id">Get results by Request ID</string>
    <string name="device_id_title">Device ID</string>
    <string name="raw_btn_text">Raw</string>
    <string name="try_again_btn_text">Try again</string>
    <string name="verdict_detected_string">YES</string>
    <string name="verdict_not_detected_string">NO</string>
    <string name="copy_button_image_description">Copy button</string>
    <string name="menu_repository_page_title">Repository page</string>
    <string name="menu_settings_title">Settings</string>
    <string name="privacy_note_in_dialog">This application shows capabilities of the AEV – library for verification devices security. The demo application uses the AEV library and sends to FingerprintJS information about installed applications and sensor measurements for making verdicts about device security. Read more in the terms of use. By continuing use the application you agree to the terms.</string>
</resources>