<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGray">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:background="@drawable/bg_main">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="148dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextAppearance.MaterialComponents.Headline4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="16dp"
                    android:text="@string/fingerprintjs"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_fingerprint" />
            </LinearLayout>


            <TextView
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="148dp"
                android:layout_marginBottom="16dp"
                android:text="@string/demo_description"
                android:textAlignment="center" />

            <FrameLayout
                android:id="@+id/get_started_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="@drawable/btn_ripple">

                <TextView
                    style="@style/MainActionButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="16dp"
                    android:text="@string/get_started_btn_text" />
            </FrameLayout>

            <TextView
                android:id="@+id/terms_btn"
                style="@style/TextAppearance.MaterialComponents.Caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:textAlignment="center"
                tools:text="@string/agreement" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>