<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/request_id_view_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/logs_btn"
            style="@style/SecondaryActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logs_btn_text" />

        <TextView
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/request_id_text" />

        <ImageView
            android:id="@+id/request_id_about_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:contentDescription="@null"
            android:src="@drawable/ic_question_mark" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:indeterminate="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/request_id_container"
            android:orientation="vertical">

            <TextView
                android:id="@+id/request_id_tv"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:textAlignment="center"
                tools:text="1yoc9t4lWxaG5TxngTywJZUN3QJ" />

            <FrameLayout
                android:id="@+id/get_results_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="@drawable/btn_ripple">

                <TextView
                    style="@style/MainActionButton"
                    android:id="@+id/get_result_btn_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="16dp"
                    android:text="@string/get_results_by_request_id" />
            </FrameLayout>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>
